--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
+    "axios": "^1.10.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.15.0",
     "lucide-react": "^0.510.0",
@@ -19,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0",
     "react-pdf": "^9.2.1",
     "react-slick": "^0.30.3",
